# config-mapper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  configs.example.toml
.github/workflows/: ci.yml
example/: configs.example.toml
src/: lib.rs  main.rs
tests/: cli.rs
