[package]
name = "config-mapper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Map local config files into target locations via symlinks with automatic backups."
license = "MIT"
readme = "README.md"
keywords = ["dotfiles", "symlink", "config", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs_extra = "1.3"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.18"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
